Fixed header responsiveness on iphone 4

--- a/client/src/scss/components/elements/_input.scss
+++ b/client/src/scss/components/elements/_input.scss
@@ -21,6 +21,11 @@
 	&.noShadow {
 		box-shadow: none;
 	}
+	@include mq(small) {
+		min-width: 100% !important;
+		max-width: 100% !important;
+		width: 100%;
+	}
 }
 .customInput__error {
 	position: absolute;
